reformateo de extensiones

--- a/continente.html
+++ b/continente.html
@@ -174,7 +174,7 @@
                                     class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
                                     <div class="d-flex align-items-center justify-content-start">
                                         <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0"
-                                            style="width: 38px; height: 38px;" href="grupo5/ASIA/asia.html" target="_blank"></a>
+                                            style="width: 38px; height: 38px;" href="grupo5/ASIA/asia.php" target="_blank"></a>
 
                                     </div>
                                 </div>
