Creacion de html del g8 y brics
actualizacion de funcionamiento

--- a/paises.html
+++ b/paises.html
@@ -42,7 +42,7 @@
                         <div class="navbar-nav ml-auto py-0">
                             <a href="index.html" class="nav-item nav-link ">Inicio</a>
                             <a href="continente.html" class="nav-item nav-link">Continente</a>
-                            <a href="ong.html" class="nav-item nav-link ">Ong</a>
+                            <a href="ong.html" class="nav-item nav-link ">ONG</a>
                             <a href="paises.html" class="nav-item nav-link active">Países</a>
                         </div>
                     </div>
