--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="navbar-nav ml-auto py-0">
             <a href="index.html" class="nav-item nav-link active">Inicio</a>
             <a href="continente.html" class="nav-item nav-link">Continente</a>
-            <a href="ong.html" class="nav-item nav-link">Ong</a>
+            <a href="ong.html" class="nav-item nav-link">ONG</a>
             <a href="paises.html" class="nav-item nav-link">Países</a>
           </div>
         </div>
